# Runbox

./: .env.example  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
artifacts/api-server/: ecosystem.config.example.cjs  package.json
artifacts/api-server/public/: demo.html
artifacts/api-server/src/: app.ts
artifacts/api-server/src/__tests__/: api.test.ts  payment.test.ts  sandbox.test.ts  sessions.test.ts
artifacts/api-server/src/lib/: mpp.ts  payment.ts  sandbox.ts  sessions.ts
artifacts/api-server/src/routes/: ai-proxy.ts  demo.ts  exec.ts  health.ts  index.ts  mpp-exec.ts
contracts/spending-cap/: Cargo.toml  README.md
contracts/spending-cap/src/: lib.rs
contracts/spending-cap/test_snapshots/test/: test_budget_exhaustion.1.json  test_full_flow.1.json
demo/: .env.example  demo_agent.py  requirements.txt  research_agent.py  runbox-demo.cast
docs/: runbox-demo.cast
